--- a/public_html/css/ven_cliente.css
+++ b/public_html/css/ven_cliente.css
@@ -16,19 +16,32 @@
 
 .campania label{
     float: left;
-    margin: 10px 0 0 20px; 
+    margin: 10px 0 0 10px; 
 }
 
 .campania input{
     width: 270px;
-    margin: 10px 0 0 20px;
+    margin: 10px 0 0 10px;
 }
 
 .campania select{
     background: #FFF;
     clear: both;
-    margin: 10px 0 0 20px;
+    margin: 10px 0 0 10px;
     width: 275px;
+}
+
+
+.observacionesChico label {
+    float:left;
+    margin: 10px 0 0 10px ;
+}
+
+.observacionesChico textarea {
+    float:left;
+    width: 618px;
+    height: 5em;
+    margin-left: 10px;
 }
 
 
@@ -64,7 +77,7 @@
     padding-right: 10px;
 }
 
-#agregar{
+.box-entrada .box-entrada .agregar{
     clear: both;
     float: right;
     margin-top: 20px;
