adm_propuestas_mejora OKA falta _coment y BUG (no aparece en el proceso 2 al area correspondiente. Revisar bien, por que puede ser un bug que suceda en otros casos. Aparentemente hay algo mal en select_all_proc_same_tabla() de clase Process() )

--- a/public_html/css/adm_propuestas_mejoras.css
+++ b/public_html/css/adm_propuestas_mejoras.css
@@ -41,7 +41,7 @@
     padding-right: 10px;
 }
 
-#agregar{
+.box-entrada .box-entrada .agregar{
     clear: both;
     float: right;
     margin-top: 20px;
