--- a/public_html/css/rh_pedido_vacaciones.css
+++ b/public_html/css/rh_pedido_vacaciones.css
@@ -95,7 +95,7 @@
     padding-right: 10px;
 }
 
-#agregar{
+.box-entrada .box-entrada .agregar{
     clear: both;
     float: right;
     margin-top: 20px;
