ven_store_check OKA, falta _coment y controlar los enviar siguiente paso. .

--- a/public_html/css/ven_store_check.css
+++ b/public_html/css/ven_store_check.css
@@ -78,6 +78,7 @@ table .tablaInput{
 
 .box-entrada .box-entrada .primerElement{
     margin-top: 0px;
+    width: 100%;
 }
 
 .box-entrada .box-entrada .ultimoElement{
