--- a/public_html/css/ven_analisis_riesgo_crediticio.css
+++ b/public_html/css/ven_analisis_riesgo_crediticio.css
@@ -427,6 +427,34 @@ form.box-coment .coment_actual .aceptar .desaprobar {
 
 
 
+
+
+
+/*PARA LOS COMENTARIOS*/
+
+form .box-entrada .archivo span {
+    margin: 10px 0px 10px 10px;
+    width: 100%;
+    float: left;
+    color: #197EB4;
+    font-size: 10px;
+    text-transform: uppercase;
+}
+
+.datoComent{
+    display: inline-block;
+    min-width: 150px;
+}
+
+.coment{
+    display: block;
+    margin-bottom: 10px;
+}
+
+
+
+
+
 /* PROPIO DEL TPL */
 
 
